--- a/src/components/AnimeContainer/AnimeContainer.module.css
+++ b/src/components/AnimeContainer/AnimeContainer.module.css
@@ -1,16 +1,83 @@
+/* .main_container {
+  display: flex;
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  margin: auto 100px;
+  flex-wrap: wrap;
+} */
+
 .container {
   height: 400px;
   width: 300px;
-  border: solid rgba(255, 0, 0, 0.416) 2px;
+  border: solid rgba(151, 151, 151, 0.416) 1px;
   padding: 2px;
   margin: 10px;
   border-radius: 5px;
   box-shadow: 2px white 4px;
-  cursor: pointer;
+  /* cursor: pointer; */
+  /* overflow: scroll; */
 }
 
-.main-container {
+/* .main-container {
+  background-color: antiquewhite;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+} */
+.contianer-title {
   background-color: antiquewhite;
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 30px;
+}
+
+.subinfo {
+  height: 20px;
+  font-size: 0.9rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(191, 188, 188, 0.221);
+}
+.subinfo p {
+  padding: 5px;
+  /* box-shadow: ; */
+}
+
+.subinfo:first-child {
+  border-right: 1px gray solid;
+}
+
+.container_body {
+  width: 100%;
+  height: 80%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  overflow: hidden;
+}
+
+.container_image {
+  /* overflow: scroll; */
+  display: flex;
+  width: 100%;
+  height: 100%;
+  padding: 5px;
+  align-items: center;
+}
+.container_image img {
+  /* height: 50px; */
+  width: 100%;
+}
+.container_info {
+  font-size: 0.8rem;
+  padding: 5px;
+  margin: 3px;
+  overflow-y: scroll;
+  height: 100%;
+}
+.detailed_info {
+  font-weight: 500;
 }
