--- a/src/components/StartingPage/StartingPage.module.css
+++ b/src/components/StartingPage/StartingPage.module.css
@@ -2,4 +2,9 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  margin: 10px auto;
+  border: 1px solid rgb(197, 196, 196);
 }
