--- a/src/components/AnimeContainer/AnimeContainer.module.css
+++ b/src/components/AnimeContainer/AnimeContainer.module.css
@@ -15,10 +15,16 @@
   margin: 10px;
   border-radius: 5px;
   box-shadow: 2px white 4px;
+  box-shadow: 0 0 0 0 #b2aeae;
+  transition: all 450ms;
+
   /* cursor: pointer; */
   /* overflow: scroll; */
 }
-
+.container:hover {
+  box-shadow: 0 4px 0 0 #b2aeae;
+  transform: scale(1.01);
+}
 /* .main-container {
   background-color: antiquewhite;
   display: flex;
@@ -32,7 +38,12 @@
   align-items: center;
   height: 30px;
 }
+.contianer-title > a {
+  color: black;
+  font-weight: 500;
 
+  text-decoration: none;
+}
 .subinfo {
   height: 20px;
   font-size: 0.8rem;
@@ -49,10 +60,10 @@
   /* box-shadow: ; */
 }
 
-.subinfo > :nth-child(1) {
-  /* height: 10px; */
+.subinfo > :nth-child(2) {
+  height: 8px;
   border-right: 1px rgba(128, 128, 128, 0.514) solid;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .container_body {
@@ -70,18 +81,22 @@
   /* overflow: scroll; */
   display: flex;
   width: 100%;
-  height: 100%;
+  /* height: 50px; */
   padding: 5px;
   align-items: center;
+  /* object-fit: fill; */
 }
 .container_image img {
+  /* object-fit: cover; */
   /* height: 50px; */
   width: 100%;
+  box-shadow: 1px 0.5px 0.5px 0.5px gray;
 }
 .container_info {
   font-size: 0.8rem;
   padding: 5px;
   margin: 3px;
+  margin-left: 15px;
   overflow-y: scroll;
   height: 100%;
 }
