--- a/src/components/AnimeDetails/AnimeDetails.module.css
+++ b/src/components/AnimeDetails/AnimeDetails.module.css
@@ -1,6 +1,7 @@
 .title_container {
   /* height: 60px; */
   background: rgb(173, 173, 173);
+  margin-top: 0;
 }
 .title_container > h3 {
   font-weight: 600;
@@ -8,20 +9,91 @@
   font-size: 1rem;
   margin: 5px 10px;
 }
+.title_container :nth-child(1) {
+  font-size: 1.1rem;
+  font-weight: 700;
+}
 .title_container :nth-child(2) {
-  color: gray;
+  color: rgb(99, 99, 99);
 }
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 2fr 4fr;
+}
+.left_container {
+  padding: 10px;
 }
 
 .image_container img {
   width: 100%;
+  border-radius: 2px;
+  box-sizing: border-box;
+  box-shadow: 2px 1px 1px gainsboro;
 }
+.more_info {
+  font-size: 0.9rem;
+}
+.more_info > p {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px rgba(128, 128, 128, 0.244) solid;
+}
+
+.more_info > p > span {
+  font-weight: 600;
+}
+
 .right_container {
   padding: 20px;
+}
+.extra_info {
+  height: 100px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  background-color: rgba(197, 197, 197, 0.437);
+  border: 1px solid rgba(197, 197, 197, 0.437);
+  box-shadow: 1px 1px rgba(128, 128, 128, 0.436);
+  justify-content: space-around;
+  align-items: center;
+}
+.score {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+}
+.score > span {
+  font-weight: 700;
+  font-size: 1.4rem;
+}
+
+.score > p {
+  background-color: rgb(40, 40, 139);
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+  margin: 5px;
+  font-size: 0.6rem;
+  height: 10px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* align-self: center; */
+  /* vertical-align: center; */
+  width: 50px;
+}
+
+.separater_line {
+  width: 0;
+  border-right: 1px solid rgba(86, 86, 86, 0.562);
+  height: 80%;
 }
 .nav_header > ul {
   text-decoration: none;
@@ -30,7 +102,7 @@
   justify-content: flex-start;
   align-items: center;
   list-style-type: none;
-  border-bottom: 1px solid rgb(0, 81, 220);
+  border-bottom: 1px solid rgb(7, 41, 100);
   padding: 0;
 }
 
@@ -39,10 +111,22 @@
   font-size: 0.8rem;
   text-transform: uppercase;
   font-weight: 500;
+  margin: 2px 5px;
 }
 .nav_header > ul > li:hover {
-  background-color: blue;
+  background-color: rgb(35, 35, 120);
   color: whitesmoke;
   cursor: pointer;
   border-radius: 5px;
+}
+.anime_synopsis :nth-child(2) {
+  font-weight: 200;
+  font-size: 0.9rem;
+}
+.anime_synopsis .gray_line_separator {
+  margin: 2px 0;
+  border-bottom: 1px rgba(159, 159, 159, 0.505) solid;
+}
+.anime_synopsis {
+  font-weight: 500;
 }
