--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,13 +1,13 @@
 .main_header {
   width: 80%;
-  min-width: 375px;
+  min-width: 600px;
   margin: 0px auto;
   height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(33, 33, 187);
-  color: white;
+  background-color: rgb(125, 125, 125);
+  color: whitesmoke;
   text-transform: uppercase;
   font-size: x-large;
   font-weight: 500;
@@ -16,14 +16,9 @@
   /* font-family: "Shadows Into Light", cursive; */
 }
 
-.animelist-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 80%;
-  min-width: 375px;
-  justify-content: center;
-  align-items: center;
-  margin: 10px auto;
-  border: 1px solid rgb(197, 196, 196);
-}
+/* @media (min-width: 600px) {
+  .main_header {
+    width: 80%;
+    min-width: none;
+  }
+} */
